[project]
name = "hexlet-django-blog"
version = "0.1.0"
description = "study project from course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexlet-django-blog"]